@startuml
    namespace game.scene {

        class LevelSceneInitializer [[LevelSceneInitializer.html]] {
            +init(Scene): void
            +loadResources(Scene): void
            +imgui(): void
        }

        class LevelEditorSceneInitializer [[LevelEditorSceneInitializer.html]] {
            +init(Scene): void
            +loadResources(Scene): void
            +imgui(): void
            +ImGuiWordSet(): void
            +imguiBlock(): void
            +imguiPrefabs(): void
            +imguiItems(): void
            +imguiMessages(): void
            +imguiBriefe(): void
        }

        class Scene [[Scene.html]] {
            #gameObjects: List<GameObject>
            +Scene(SceneInitializer)
            +init(): void
            +start(): void
            +gameStart(): void
            +addGameObject(GameObject): void
            +editorUpdate(float): void
            +update(float): void
            +render(): void
            +camera(): Camera
            +getGameObjectWith(Class<T extends Component>): GameObject
            +getGameObjects(): List<GameObject>
            +getGameObject(int): GameObject
            +getGameObject(String): GameObject
            +imgui(): void
            +createGameObject(String): GameObject
            +save(): void
            +load(): void
            +destroy(): void
        }

        abstract class SceneInitializer [[SceneInitializer.html]] {
            {abstract} +init(Scene): void
            {abstract} +loadResources(Scene): void
            {abstract} +imgui(): void
        }

        SceneInitializer <|-- LevelSceneInitializer
        SceneInitializer <|-- LevelEditorSceneInitializer
    }

    center footer UMLDoclet 2.1.0, PlantUML %version()
@enduml
